fix: correct table spacing and table th white space

--- a/packages/components/src/components/Table/TableBody/styles.css
+++ b/packages/components/src/components/Table/TableBody/styles.css
@@ -20,6 +20,8 @@
 .arkyn_table_body > tr > td:last-child {
   border-top-right-radius: var(--rounded-cards);
   border-bottom-right-radius: var(--rounded-cards);
+
+  padding-left: 16px;
 }
 
 .arkyn_table_body > tr:nth-child(odd):hover > td {
